# Light_Glue_CPP

./: CMakeLists.txt
cmake/: LightGlueConfig.cmake.in
src/feature/: get_patches_cuda.cu
